--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 
     <string name="search">Search</string>
     <string name="save">Save</string>
+    <string name="delete">delete</string>
 </resources>
